[package]
name = "jitcalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = { version = "0.103.0", default-features = false }
cranelift-codegen = { version = "0.103.0", default-features = false, features = ["all-arch"] }
anyhow = "1.0.79"
rustix = { version = "0.38.29", features = ["mm"] }
object = { version = "0.32.1", default-features = false, features = ["write"] }
target-lexicon = "0.12.13"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "simple"
harness = false

[features]
default = ["std"]
std = []